--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 
 <head>
     <title>My Github Web Page</title>
+    <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    Welcome to My Github Web Page.
+    <div>
+        <header class="p-3 bg-dark text-white">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
+                        <svg class="bi me-2" width="40" height="32">
+                            <use xlink:href="#bootstrap" />
+                        </svg>
+                    </a>
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li>
+                            <a href="#" class="nav-link px-2 text-secondary">Home</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <!-- nav_bar -->
+    </div>
+    <div>
+        <h1>Welcome to My Github Web Page.</h1>
+        <!-- content -->
+    </div>
+    <div>
+        <!-- footer -->
+    </div>
 </body>
 
 </html>
