--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
                         <svg class="bi me-2" width="40" height="32">
-                            <text fill="#ffffff" font-size="32" font-family="lobster">CostSu</text>
+                            <text fill="#ffffff" font-size="32" font-family="Verdana">CostSu</text>
                         </svg>
                     </a>
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
