Change to <img>

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32">
+                        <img class="bi me-2" width="40" height="32" src="Drawing.svg" alt="CostSu"/>
+                        <!-- <svg class="bi me-2" width="40" height="32">
                             <text fill="#ffffff" font-size="32" font-family="lobster">CostSu</text>
-                        </svg>
+                        </svg> -->
                     </a>
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li>
@@ -29,7 +30,7 @@
         <!-- nav_bar -->
     </div>
     <div>
-        <h1>Welcome to My Github Web Page.</h1>
+        <h1 style="font-family: Lobster;">Welcome to My Github Web Page.</h1>
         <!-- content -->
     </div>
     <div>
