img class d-flex testing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
-                        <img class="img-fluid" src="Drawing.svg" alt="CostSu"/>
+                        <img class="d-flex img-fluid" src="Drawing.svg" alt="CostSu"/>
                         <!-- <svg class="bi me-2" width="40" height="32">
                             <text fill="#ffffff" font-size="32" font-family="lobster">CostSu</text>
                         </svg> -->
