--- a/index.html
+++ b/index.html
@@ -14,15 +14,24 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
-                        <img class="d-flex img-fluid" src="Drawing.svg" alt="CostSu"/>
+                        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                            <use xlink:href="#Drawing"></use>
+                        </svg>
+                        <!-- <img class="d-flex img-fluid" src="Drawing.svg" alt="CostSu"/> -->
                         <!-- <svg class="bi me-2" width="40" height="32">
                             <text fill="#ffffff" font-size="32" font-family="lobster">CostSu</text>
                         </svg> -->
 
                     </a>
-                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    < class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li>
                             <a href="#" class="nav-link px-2 text-secondary">Home</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-2 text-secondary">Contract</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-2 text-secondary">About</a>
                         </li>
                     </ul>
                 </div>
