--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         </svg> -->
 
                     </a>
-                    < class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li>
-                            <a href="#" class="nav-link px-2 text-secondary">Home</a>
+                            <a href="#" class="nav-link px-2 text-white">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-2 text-secondary">Contract</a>
+                            <a href="#" class="nav-link px-2 text-white">Contract</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-2 text-secondary">About</a>
+                            <a href="#" class="nav-link px-2 text-white">About</a>
                         </li>
                     </ul>
                 </div>
