--- a/index.html
+++ b/index.html
@@ -9,42 +9,40 @@
 </head>
 
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-        <symbol id="CostSu" viewBox="0 0 118 94">
-            <title>CostSu</title>
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z">
-            </path>
-        </symbol>
-        <symbol id="home" viewBox="0 0 16 16">
-            <path
-                d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z">
-            </path>
-        </symbol>
-        <symbol id="speedometer2" viewBox="0 0 16 16">
-            <path
-                d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4zM3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.389.389 0 0 0-.029-.518z">
-            </path>
-            <path fill-rule="evenodd"
-                d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A7.988 7.988 0 0 1 0 10zm8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3z">
-            </path>
-        </symbol>
-        <symbol id="table" viewBox="0 0 16 16">
-            <path
-                d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z">
-            </path>
-        </symbol>
-        <symbol id="people-circle" viewBox="0 0 16 16">
-            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
-            <path fill-rule="evenodd"
-                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z">
-            </path>
-        </symbol>
-        <symbol id="grid" viewBox="0 0 16 16">
-            <path
-                d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z">
-            </path>
-        </symbol>
+    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="350.000000pt" height="240.000000pt"
+        viewBox="0 0 350.000000 240.000000" preserveAspectRatio="xMidYMid meet">
+        <metadata>
+            Created by potrace 1.16, written by Peter Selinger 2001-2019
+        </metadata>
+        <g transform="translate(0.000000,240.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+            <path d="M830 1580 c-118 -40 -205 -192 -226 -396 -14 -132 14 -216 86 -258
+    74 -44 238 -17 301 50 25 27 39 31 39 11 0 -21 43 -56 81 -67 113 -33 222 50
+    259 196 l17 66 51 17 c29 10 52 16 52 14 0 -11 -46 -92 -66 -116 -29 -34 -32
+    -101 -8 -136 21 -29 72 -51 119 -51 47 0 92 20 163 70 l57 41 9 -36 c23 -99
+    172 -96 245 5 l29 40 12 -30 c35 -85 148 -120 268 -85 114 34 180 140 153 242
+    -13 46 -47 98 -123 188 -31 37 -60 81 -63 97 -19 86 84 148 125 75 14 -25 13
+    -30 -6 -67 -19 -34 -20 -41 -7 -51 24 -20 74 -15 95 10 27 35 24 102 -7 140
+    -33 39 -82 54 -160 49 -110 -7 -179 -73 -178 -169 1 -55 18 -89 81 -166 85
+    -102 102 -133 102 -183 -1 -71 -51 -118 -116 -106 -90 17 -83 139 9 161 31 8
+    32 13 12 42 -16 23 -56 34 -97 26 -35 -7 -85 -57 -93 -94 -5 -20 -13 -29 -26
+    -29 -10 0 -19 -6 -19 -13 0 -22 -45 -57 -73 -57 -35 0 -35 13 -2 167 34 156
+    32 151 63 155 37 4 44 38 8 38 -30 0 -30 4 -11 84 l14 59 -65 -6 c-36 -4 -69
+    -9 -73 -11 -5 -3 -14 -33 -20 -66 -8 -38 -17 -60 -25 -60 -8 0 -17 -7 -20 -16
+    -9 -22 -8 -24 10 -24 10 0 14 -6 10 -17 -2 -10 -14 -65 -26 -123 -17 -78 -28
+    -109 -44 -122 -11 -10 -24 -18 -27 -18 -4 0 -10 78 -15 173 l-9 172 -50 -2
+    c-85 -4 -92 -8 -110 -62 -14 -42 -22 -52 -60 -70 -62 -29 -83 -27 -91 7 -18
+    84 -50 112 -125 112 -115 0 -212 -108 -235 -263 -4 -23 -14 -50 -23 -61 -28
+    -32 -88 -56 -139 -56 -39 0 -53 5 -73 26 -67 71 -5 400 92 491 57 52 116 32
+    105 -35 -3 -19 -12 -42 -20 -51 -21 -23 -3 -41 40 -41 65 0 89 99 38 159 -43
+    52 -121 63 -214 31z m467 -276 c3 -9 1 -25 -5 -35 -15 -24 -15 -72 -1 -86 28
+    -28 -52 -183 -95 -183 -61 0 -37 196 35 283 33 40 56 47 66 21z" />
+            <path d="M2566 1303 c-8 -38 -25 -118 -37 -180 -20 -101 -21 -115 -8 -150 27
+    -70 125 -82 189 -23 37 34 40 35 40 16 0 -8 12 -24 28 -36 22 -18 35 -21 70
+    -16 79 11 122 47 157 130 15 35 15 36 -7 36 -15 -1 -30 -12 -43 -33 -22 -35
+    -71 -50 -80 -25 -3 8 10 87 30 177 19 89 35 164 35 167 0 2 -31 4 -69 4 l-68
+    0 -17 -82 c-35 -164 -57 -242 -73 -260 -19 -21 -51 -24 -59 -4 -4 11 44 264
+    62 329 5 15 -3 17 -65 17 l-69 0 -16 -67z" />
+        </g>
     </svg>
     <div>
         <header class="p-3 bg-dark text-white">
@@ -52,7 +50,7 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a herf="/" class="d-flex align-items-center mb-2 mg-lg-0 text-white text-decoration-none">
                         <svg class="bi me-2" width="40" height="32" role="img" aria-label="CostSu">
-                            <use xlink:href="#CostSu"></use>
+                            <use xlink:href="CostSu">
                         </svg>
                     </a>
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
